add analytics